# functvs

./: .isort.cfg  README.md  __init__.py  pyproject.toml
Playbook/: 2023-playbook.md
Playbook/2023/F4/: 2023-playbook.md
functvs/: __init__.py  common.py  constants.py  descriptvm.py  factorials.py  pascal.py  pi.py  sequences.py  sequences_validator.py  triangles.py
tests/: mechanics_test.py
