[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Functvs"
version = "0.0.1"
authors = [
  { name="shimon-d", email="sdegli@proton.me" },
]
description = "Advanced Open-source Mathematics lib"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"


[project.urls]
"Homepage" = "https://github.com/shimon-d/functvs"
"Bug Tracker" = "https://github.com/shimon-d/functvs/issues"